--- a/ImageFromXamarinUI/ImageFromXamarinUI.csproj
+++ b/ImageFromXamarinUI/ImageFromXamarinUI.csproj
@@ -1,45 +1,48 @@
-<Project Sdk="MSBuild.Sdk.Extras/3.0.22">
+﻿<Project Sdk="MSBuild.Sdk.Extras/3.0.22">
   <PropertyGroup>
-    <TargetFrameworks>netstandard2.0;Xamarin.iOS10;MonoAndroid80;MonoAndroid81;MonoAndroid90;MonoAndroid10.0;</TargetFrameworks>
+    <TargetFrameworks>netstandard2.0;Xamarin.iOS10;MonoAndroid90;MonoAndroid10.0;</TargetFrameworks>
     <AssemblyName>Sample.Xamarin.Forms.ViewToImage</AssemblyName>
-    <RootNamespace>Sample.Xamarin.Forms.ViewToImage</RootNamespace>
-    <PackageId>Sample.Xamarin.Forms.ViewToImageTEst</PackageId>
+    <RootNamespace>ImageFromXamarinUI</RootNamespace>
+    <PackageId>ImageFromXamarinUI</PackageId>
     <PackageIcon>icon.png</PackageIcon>
-    <Summary>Converter From Xamarin.Forms.View To Image</Summary>
-    <PackageTags>xamarin, ios, android, toolkit, xamarin.forms</PackageTags>
-    <Title>Sample.Xamarin.Forms.ViewToImage</Title>
-    <Description>Converter From Xamarin.Forms.View To Image</Description>
+    <Summary>Extension methods for capturing images from UI</Summary>
+    <PackageTags>xamarin, ios, android, toolkit, xamarin.forms, image, ui, screenshot</PackageTags>
+    <Title>ImageFromXamarinUI</Title>
+    <Description>Extension methods for capturing images from UI</Description>
     <Product>$(AssemblyName) ($(TargetFramework))</Product>
     <AssemblyVersion>1.0.0.0</AssemblyVersion>
     <AssemblyFileVersion>1.0.0.0</AssemblyFileVersion>
     <Version>1.0.0</Version>
-    <PackageVersion>1.0.0</PackageVersion>
+    <PackageVersion>1.0.0-pre1</PackageVersion>
     <Authors>dimonovdd</Authors>
     <Owners>dimonovdd</Owners>
-    <RepositoryUrl>https://github.com/dimonovdd/Xamarin.Forms.ViewToImage</RepositoryUrl>
-    <PackageReleaseNotes>See: https://github.com/dimonovdd/Xamarin.Forms.ViewToImage/releases</PackageReleaseNotes>
+    <RepositoryUrl>https://github.com/dimonovdd/ImageFromXamarinUI</RepositoryUrl>
+    <PackageReleaseNotes>See: https://github.com/dimonovdd/ImageFromXamarinUI/releases</PackageReleaseNotes>
     <DefineConstants>$(DefineConstants);</DefineConstants>
     <UseFullSemVerForNuGet>false</UseFullSemVerForNuGet>
     <EnableDefaultCompileItems>false</EnableDefaultCompileItems>
     <PackageLicenseFile>LICENSE</PackageLicenseFile>
     <PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
-    <PackageProjectUrl>https://github.com/dimonovdd/Xamarin.Forms.ViewToImage</PackageProjectUrl>
+    <PackageProjectUrl>https://github.com/dimonovdd/ImageFromXamarinUI</PackageProjectUrl>
     <DebugType>portable</DebugType>
     <Configurations>Debug;Release</Configurations>
-    <DevelopmentDependency>true</DevelopmentDependency>
  </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)'=='Debug' ">
     <DebugSymbols>true</DebugSymbols>
+  </PropertyGroup>
+  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
+    <DocumentationFile>bin\Debug\netstandard2.0\ImageFromXamarinUI.xml</DocumentationFile>
+  </PropertyGroup>
+  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
+    <DocumentationFile>bin\Release\netstandard2.0\ImageFromXamarinUI.xml</DocumentationFile>
   </PropertyGroup>
   <ItemGroup>
     <None Include="..\LICENSE" PackagePath="" Pack="true" />
     <None Include="..\icon.png" PackagePath="" Pack="true" />
     <PackageReference Include="Xamarin.Build.TypeRedirector" Version="0.1.2-preview" PrivateAssets="all" />
+    <PackageReference Include="Xamarin.Forms" Version="4.4.0.991864" />
     <Compile Include="**\*.shared.cs" />
     <Compile Include="**\*.shared.*.cs" />
-  </ItemGroup>
-  <ItemGroup Condition=" $(TargetFramework.StartsWith('netstandard1.')) ">
-    <PackageReference Include="System.ValueTuple" Version="4.5.0" />
   </ItemGroup>
   <ItemGroup Condition=" $(TargetFramework.StartsWith('netstandard')) ">
     <PackageReference Include="System.Numerics.Vectors" Version="4.5.0" />
