--- a/Sample/Sample.Android/Sample.Android.csproj
+++ b/Sample/Sample.Android/Sample.Android.csproj
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
@@ -53,7 +53,7 @@
     <Reference Include="System.Numerics.Vectors" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Xamarin.Forms" Version="4.8.0.1451" />
+    <PackageReference Include="Xamarin.Forms" Version="4.8.0.1821" />
     <PackageReference Include="Xamarin.Essentials" Version="1.5.3.2" />
   </ItemGroup>
   <ItemGroup>
@@ -92,9 +92,9 @@
       <Project>{E3982452-E783-448F-B9CD-8246549F0D5F}</Project>
       <Name>Sample</Name>
     </ProjectReference>
-    <ProjectReference Include="..\..\Sample.Xamarin.Forms.ViewToImage\Xamarin.Forms.ViewToImage.csproj">
-      <Project>{D4B822E2-80BE-4771-83E0-CF83B8D899D0}</Project>
-      <Name>Xamarin.Forms.ViewToImage</Name>
+    <ProjectReference Include="..\..\ImageFromXamarinUI\ImageFromXamarinUI.csproj">
+      <Project>{6E301B89-554A-46B7-A0BA-A892171F0A3C}</Project>
+      <Name>ImageFromXamarinUI</Name>
     </ProjectReference>
   </ItemGroup>
  <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
