--- a/Sample/Sample/Sample.csproj
+++ b/Sample/Sample/Sample.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
@@ -11,10 +11,10 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Xamarin.Forms" Version="4.8.0.1451" />
+    <PackageReference Include="Xamarin.Forms" Version="4.8.0.1821" />
     <PackageReference Include="Xamarin.Essentials" Version="1.5.3.2" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\Sample.Xamarin.Forms.ViewToImage\Xamarin.Forms.ViewToImage.csproj" />
+    <ProjectReference Include="..\..\ImageFromXamarinUI\ImageFromXamarinUI.csproj" />
   </ItemGroup>
 </Project>
